--- a/.jshintrc
+++ b/.jshintrc
@@ -15,8 +15,8 @@
 	"noarg": true,
 	"noempty": true,
 	"nonew": true,
-	"plusplus": true,
-	"quotmark": "single",
+	"plusplus": false,
+	"quotmark": true,
 	"regexp": true,
 	// This option prohibits the use of unsafe . in regular expressions.
 	"undef": true,
@@ -58,7 +58,7 @@
 	"shadow": false,
 	"sub": false,
 	"supernew": false,
-	"validthis": true,
+	"validthis": false,
 
 	// Environments
 	"browser": false,
