--- a/.editorconfig
+++ b/.editorconfig
@@ -43,10 +43,10 @@ bin=node
 ;  "eval_code": false,
 
 ; jsbeautify settings
-indent_size = 4
+indent_size = 2
 ;indent_char = " "
 ;indent_level = 0
-indent_with_tabs = true
+indent_with_tabs = false
 ;preserve_newlines = true
 max_preserve_newlines = 2
 ;space_in_paren = false
@@ -64,17 +64,17 @@ good_stuff = true
 
 ;editorconfig settings
 max_char = 160
-indent_style = tab
-tab_width = 4
+indent_style = space
+tab_width = 2
 charset = utf-8
 insert_final_newline = true
 trim_trailing_whitespace = true
 
 [**.css]
 ;path=~/.vim/bundle/vim-jsbeautify/plugin/lib/beautify-css.js
-indent_style = tab
-indent_size = 4
-tab_width = 4
+indent_style = space
+indent_size = 2
+tab_width = 2
 charset = utf-8
 insert_final_newline = true
 trim_trailing_whitespace = true
@@ -84,9 +84,9 @@ trim_trailing_whitespace = true
 ; And such comments or apply only in global configuration
 ; So it's best to avoid them
 ;vim:path=~/.vim/bundle/vim-jsbeautify/plugin/lib/beautify-html.js
-indent_style = tab
-indent_size = 4
-tab_width = 4
+indent_style = space
+indent_size = 2
+tab_width = 2
 charset = utf-8
 insert_final_newline = true
 trim_trailing_whitespace = true
