--- a/.editorconfig
+++ b/.editorconfig
@@ -53,7 +53,7 @@ max_preserve_newlines = 2
 jslint_happy = true
 brace_style = end-expand
 ;break_chained_methods = false
-keep_array_indentation = true
+keep_array_indentation = false
 ;keep_function_indentation = false
 space_before_conditional = true
 ;unescape_strings = false
